--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,8 +6,7 @@
 </nav>
 
 <main>
-    <app-film-form></app-film-form>
-    <app-films-table></app-films-table>
+    <app-films></app-films>
 </main>
 
 
