--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,11 @@
 </nav>
 
 <main>
-    <app-films></app-films>
+    <div class="container">
+        <app-film-add></app-film-add>
+        <app-modal></app-modal>
+        <app-films-table></app-films-table>
+    </div>
 </main>
 
 
