--- a/src/app/film-form/film-form.component.html
+++ b/src/app/film-form/film-form.component.html
@@ -85,7 +85,7 @@
                 <div>
                     <label for="poster-file">Загрузить постер<br>
                         <img [src]="imagePreviewSrc || '../../../assets/img/150.png'" alt="Загрузить постер"
-                             [class.poster-invalid] = "getValidPosterStatus()">
+                             [class.poster-invalid] = "getValidPosterStatus()" [class.poster-not-uploaded] = "posterNotUploaded">
                         <input type="file" class="form-control-file" id="poster-file" name="poster_file"
                                accept="image/jpeg" formControlName="posterFile" (change)="onFileChange($event)" hidden>
                     </label>
